[metadata]
name=niftyml
description=PET-MR Machine Learning
long_description=file: README.rst
long_description_content_type=text/x-rst
license=MPL 2.0
license_file=LICENCE
url=https://github.com/NiftyPET/niftyml
project_urls=
    Changelog=https://github.com/NiftyPET/niftyml/releases
author=Casper da Costa-Luis
author_email=imaging@cdcl.ml
keywords=PET, ML
provides=niftypet.ml
classifiers=
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
[options]
python_requires=>=3.6
install_requires=numpy
packages=find:
[options.extras_require]
dev=
    pre-commit
    pytest
    pytest-cov
    pytest-timeout
    codecov
[options.packages.find]
exclude=tests

[yapf]
spaces_before_comment=15, 20
arithmetic_precedence_indication=true
allow_split_before_dict_value=false
coalesce_brackets=True
column_limit=99
each_dict_entry_on_separate_line=False
space_between_ending_comma_and_closing_bracket=False
split_before_named_assigns=False
split_before_closing_bracket=False

[isort]
profile=black
line_length=99
known_first_party=niftypet,tests

[flake8]
statistics=True
max_line_length=99
extend-ignore=E261,P101
exclude=.git,__pycache__,build,dist,.eggs

[tool:pytest]
timeout=30
log_level=INFO
python_files=tests/test_*.py
addopts=-v --tb=short -rxs -W=error --durations=0 --durations-min=1 --cov=niftypet.ml --cov-report=term-missing --cov-report=xml

[coverage:run]
branch=True
include=niftypet/ml/*
relative_files=True
[coverage:report]
show_missing=True
